--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 .root {
     min-height: 100vh;
     min-width: 320px;
-    max-width: 100vw;
+    max-width: 1280px;
     margin: 0 auto;
     box-sizing: border-box;
     font-family: 'Inter', Arial, sans-serif;
