--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -2,7 +2,7 @@
     padding: 70px 0 28px;
 }
 
-.card__list {
+.cards__list {
     border: none;
     list-style-type: none;
     padding-left: 0;
@@ -19,7 +19,7 @@
     .cards {
         padding-bottom: 12px;
     }
-    .card__list {
+    .cards__list {
         row-gap: 47px;
         grid-template-columns: repeat(2, 1fr);
     }
@@ -27,9 +27,9 @@
 
 @media (max-width: 767px) {
     .cards {
-        padding-bottom: 13px;
+        padding: 40px 0 13px;
     }
-    .card__list {
+    .cards__list {
         row-gap: 39px;
         grid-template-columns: repeat(1, 1fr);
     }
