--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,4 +1,4 @@
-.content-profile {
+.profile {
     margin: 0 auto 0;
     display: flex;
     flex-direction: column;
@@ -12,7 +12,7 @@
     font-weight: 400;
 }
 
-.profile {
+.profile__form {
     min-width: 410px;
     display: flex;
     flex-direction: column;
@@ -70,7 +70,7 @@
 }
 
 .profile__input:focus {
-    outline: none;
+    outline: 2px solid #F3C1F8;
     font-family: Inter;
     font-size: 11px;
     font-weight: 400;
@@ -158,7 +158,7 @@
     .profile__title {
         margin-bottom: 80px;
     }
-    .profile {
+    .profile__form {
         min-width: 100%;
         align-items: center;
     }
