--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -3,6 +3,23 @@
     padding: 100px 70px;
 }
 
+.techs__title {
+    color: #000;
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: -0.88px;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.techs__line {
+    margin-top: 23px;
+    min-height: 1px;
+    width: 100%;
+    background-color: #000;
+}
+
 .techs__column {
     display: flex;
     flex-direction: column;
@@ -82,6 +99,14 @@
 @media (max-width: 767px) {
     .techs {
         padding: 70px 18px;
+    }
+    .techs__title {
+        font-size: 18px;
+        font-weight: 400;
+        letter-spacing: -0.72px;
+    }
+    .techs__line {
+        margin-top: 28px;
     }
     .techs__column {
         margin-top: 60px;
