--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,6 @@
+@import '../../vendor/normalize.css';
+@import '../../vendor/inter/inter.css';
+
 .root {
     min-height: 100vh;
     min-width: 320px;
