--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -24,6 +24,7 @@
 
 .card:hover .card__save-button {
     display: block;
+    z-index: 2;
 }
 
 .card__save-button_inactive {
@@ -72,11 +73,26 @@
 
 .card:hover .card__delete-button {
     display: block;
+    z-index: 2;
+}
+
+.card__link {
+    width: 100%;
+    height: 201px;
+    color: black;
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+}
+
+.card__link:hover {
+    opacity: 0.7;
 }
 
 .card__image {
-    max-width: 360px;
-    min-height: 201px;
+    display: flex;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -119,9 +135,8 @@
     .card {
         max-width: 339px;
     }
-    .card__image {
-        max-width: 339px;
-        min-height: 190px;
+    .card__link {
+        height: 190px;
     }
     .card__row {
         margin: 25px 0 0;
@@ -132,9 +147,8 @@
     .card {
         max-width: 300px;
     }
-    .card__image {
-        max-width: 300px;
-        min-height: 168px;
+    .card__link {
+        height: 168px;
     }
     .card__row {
         margin: 16px 0 0;
