--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,8 +40,7 @@
 }
 
 .preloader {
-    /* display: flex; показывать при загрузке */
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
