--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -22,9 +22,8 @@
     opacity: 0.8;
 }
 
-.card:hover .card__save-button {
+.card:hover .card__save-button_inactive {
     display: block;
-    z-index: 2;
 }
 
 .card__save-button_inactive {
@@ -35,6 +34,7 @@
     font-size: 10px;
     font-weight: 400;
     line-height: 9px;
+    z-index: 1;
 }
 
 .card__save-button_inactive:before {
@@ -43,11 +43,13 @@
 }
 
 .card__save-button_active {
+    display: block;
     min-width: 21px;
     background-color: transparent;
     background-image: url("../../images/save-active.svg");
     background-size: contain;
     background-repeat: no-repeat;
+    z-index: 1;
 }
 
 .card__delete-button {
@@ -65,6 +67,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     display: none;
+    z-index: 1;
 }
 
 .card__delete-button:hover {
@@ -73,7 +76,6 @@
 
 .card:hover .card__delete-button {
     display: block;
-    z-index: 2;
 }
 
 .card__link {
@@ -164,5 +166,11 @@
     .card__delete-button {
         top: 10px;
         right: 10px;
+    }
+    .card__save-button_inactive {
+        display: block;
+    }
+    .card__delete-button {
+        display: block;
     }
 }
